primeiros passos de index

--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -1,13 +1,13 @@
-<form action="/login" method="POST">
-    <h2>Login</h2>
+<main class="login-page">
+    <form action="/login" method="POST" class="login-form">
+        <h2>Login</h2>
+        <br>
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password" placeholder="Senha" required>
+        <button type="submit">Entrar</button>
 
-    <br>
-
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Senha" required>
-    <button type="submit">Entrar</button>
-
-    <br>
-    
-    <p>Não tem conta? <a href="/register">Registrar</a></p>
-</form>
+        <br>
+        
+        <p>Não tem conta? <a href="/register">Registrar</a></p>
+    </form>
+</main>
