--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,23 +8,21 @@
 
 /* Fundo da página */
 body {
-    display: flex;
-    justify-content: center;
     height: 100vh;
     width: 100%;
     background-color: #FAFAFA;
 }
 
-main{
+.login-page, .register-page {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-top: 12rem;
-    width: 100%;
+    height: 100vh;
 }
 
 /* Container do formulário */
-form {
+.login-form, .register-form {
     background-color: #fff;
     padding: 2rem 3rem;
     border-radius: 12px;
