--- a/views/ideas/list.handlebars
+++ b/views/ideas/list.handlebars
@@ -1,6 +1,6 @@
 <div class="listIdeas">
     <header class="listHeader">
-        <button>Criar Ideia</button>
+        <a href="/ideas/create"><button>Criar Ideia</button></a>
         <a href="/logout"><button>Logout</button></a>
     </header>
     <ul class="ideasGrid">
